report: fix report key-value color contrast (#1028)

--- a/webtau-reactjs/src/report/details/steps/StepToken.css
+++ b/webtau-reactjs/src/report/details/steps/StepToken.css
@@ -25,7 +25,7 @@
 }
 
 .step-token.action {
-    color: #4a9aff;
+    color: #91bef7;
 }
 
 .step-token.matcher {
